--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    height: 150vh;
+    height: 175vh;
     margin: 0;
     display: flex;
     flex-direction: column;
@@ -73,7 +73,7 @@ body {
         display: flex;
         justify-content: space-between;
         gap: 40px;
-        padding: 80px 0;
+        padding: 60px 0;
     }
 
 .content {
@@ -81,11 +81,12 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 24px;
 }
     .contentBoxes {
         display: flex;
-        padding: 0 120px;
-        gap: 24px;
+        padding: 0 1000px;
+        gap: 75px;
     }
 
     .boxes {
@@ -98,6 +99,8 @@ body {
         font-size: 36px;
         font-weight: extra-bold;
         color: #1F2937;
+        margin-top: 0;
+        margin-bottom: 24px;
     }
     .contentImg {
         border: 4px solid #3882F6;
@@ -109,7 +112,7 @@ body {
     .text {
         text-align: center;
         color: #1F2937;
-        padding: 0 24px;
+        padding: 0px;
     }
 
 .quote {
@@ -121,7 +124,7 @@ body {
     font-size: 36px;
     font-weight: 100;
     font-style: italic;
-    padding: 0 120px;
+    padding: 24px 120px;
 }
 
     .quote .author {
@@ -133,10 +136,46 @@ body {
     }
 
 .bottom {
-    flex: 0 1 50px;
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    justify-content: center;
+    padding: 0px 120px;
 }
+    .center {
+        background-color: #3882F6;
+        color: #E5E7EB;
+        border-radius: 8px;
+        padding: 46px;
+        display: flex;
+        justify-content: space-between;
+    }
+
+    h3 {
+        font-size: 18px;
+        margin: 0;
+    }
+
+    .center p {
+        font-weight: 100;
+        padding: 0;
+    }
+
+    .two {
+        background-color: #3882F6;
+        color: #E5E7EB;
+        padding: 8px 28px;
+        border: none;
+        border-radius: 6px;
+        font-size: 16px;
+        font-weight: bold;
+        border: 2px solid #E5E7EB;
+    }
 
 .footer {
     display: flex;
     justify-content: center;
+    background-color: #1f2937;
+    color: #F9FAF8;
+    padding: 20px
 }
